<resources>
    <string name="app_name">Loginandregister</string>
    <string name="enter_user_n_pass">Please enter username and password</string>
    <string name="enter_valid_phone">Please enter valid phone number</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="needAccount">Create new account ?</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="passhint">Password</string>
</resources>
